# ballistics-engine

./: .gitignore  CLI_USAGE.md  Cargo.toml  README.md  ballistics-cli  ballistics_standalone.rs  test_ffi.c
.cargo/: config.toml
.github/workflows/: build-and-release.yml
data/: LICENSE  README.md  g1.npy  g7.npy
examples/: 01_basic_trajectory.rs  02_monte_carlo.rs  03_wind_effects.rs  04_bc_estimation.rs  05_drag_comparison.rs  06_data_export.rs  07_test_spread.rs  README.md
releases/freebsd-x86_64/: ballistics-0.3.2-freebsd-x86_64  ballistics-0.3.2-freebsd-x86_64.sha256
releases/netbsd-x86_64/: ballistics-0.3.2-netbsd-x86_64  ballistics-0.3.2-netbsd-x86_64.sha256
src/: aerodynamic_jump.rs  angle_calculations.rs  atmosphere.rs  bc_estimation.rs  cli_api.rs  constants.rs  derivatives.rs  drag.rs  drag_model.rs  drag_pure_test.rs  drag_tables.rs  fast_trajectory.rs  ffi.rs  form_factor.rs  lib.rs  main.rs  monte_carlo.rs  pitch_damping.rs  precession_nutation.rs  reynolds.rs  spin_decay.rs  spin_drift.rs  stability.rs  trajectory_sampling.rs  trajectory_solver.rs  transonic_drag.rs  wasm.rs  wasm_tests.rs  wind.rs  wind_shear.rs
tests/: integration_cli.rs  test_imperial.sh  test_monte_carlo.py  test_units  test_units.rs  test_units.sh
