[package]
name = "ballistics-engine"
version = "0.1.0"
edition = "2021"
authors = ["Extracted from ballistics project"]
description = "High-performance ballistics trajectory engine with professional physics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ballistics-engine"
keywords = ["ballistics", "trajectory", "physics", "simulation"]
categories = ["science", "simulation"]

[features]
default = []

[dependencies]
nalgebra = "0.33"
once_cell = "1.19"
ndarray = "0.15"
ndarray-npy = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"

# Python support (always included for now)
pyo3 = { version = "0.22" }
numpy = "0.22"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bin]]
name = "ballistics"
path = "src/main.rs"

[[bin]]
name = "ballistics-cli"
path = "src/bin/ballistics_cli.rs"

# [[bench]]
# name = "trajectory"
# harness = false

[lib]
name = "ballistics_engine"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
