[package]
name = "ballistics-engine"
version = "0.3.2"
edition = "2021"
authors = ["Alex Jokela <email@tinycomputers.io>"]
description = "High-performance ballistics trajectory engine with professional physics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajokela/ballistics-engine"
homepage = "https://ballistics.rs/"
documentation = "https://docs.rs/ballistics-engine"
keywords = ["ballistics", "trajectory", "physics", "simulation"]
categories = ["science", "simulation"]
exclude = ["app/", "tests/", "examples/", "ios.png", "pkg/", "test_ffi.c", "test_monte_carlo.py", "ballistics_standalone.rs"]

[features]
default = []

[dependencies]
nalgebra = "0.33"
once_cell = "1.19"
ndarray = "0.15"
ndarray-npy = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
wasm-bindgen-test = "0.3"

[[bin]]
name = "ballistics"
path = "src/main.rs"

[[bin]]
name = "ballistics-cli"
path = "src/bin/ballistics_cli.rs"

# [[bench]]
# name = "trajectory"
# harness = false

[lib]
name = "ballistics_engine"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
